inspector converted to functional component and infobox edit page image placeholder style fixed

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -707,3 +707,8 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	display: flex;
 	justify-content: space-between;
 }
+
+// fix image placeholder design
+.components-button.has-icon .dashicon.dashicons-format-image {
+	margin: 0;
+}
