--- a/src/editor.scss
+++ b/src/editor.scss
@@ -702,6 +702,11 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	left: 83px;
 }
 
+// fix of this issue (https://prnt.sc/111gq2g)
+#editor .interface-complementary-area .components-panel__header {
+	z-index: 2;
+}
+
 // Typography style
 .eb-typography-base div {
 	display: flex;
