--- a/src/editor.scss
+++ b/src/editor.scss
@@ -688,8 +688,13 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	color: #6c40f7;
 }
 
+.wrap_res {
+	position: relative;
+}
+
 .resIcons {
 	position: absolute;
+	left: 80px;
 }
 
 .eb-typography-component-panel .wrap_res.forFontSize .resIcons {
@@ -716,4 +721,16 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 // fix image placeholder design
 .components-button.has-icon .dashicon.dashicons-format-image {
 	margin: 0;
+}
+
+// head img height and width resIcons
+
+.eb-panel-control .wrap_res.for-icon-size .resIcons {
+	left: 60px;
+}
+
+.eb-panel-control .wrap_res.for-head-img-height .resIcons,
+.eb-panel-control .wrap_res.for-head-img-width .resIcons,
+.eb-panel-control .wrap_res.for-number-size .resIcons {
+	left: 85px;
 }
