--- a/src/editor.scss
+++ b/src/editor.scss
@@ -771,3 +771,10 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	box-shadow: none;
 }
 // color control styles end
+
+// infobox image upload button styles
+.eb-infobox-image-wrapper button.eb-infobox-img-btn.components-button {
+	height: 150px;
+	width: 150px;
+	background: #e3e3e3;
+}
