--- a/src/editor.scss
+++ b/src/editor.scss
@@ -778,3 +778,73 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	width: 150px;
 	background: #e3e3e3;
 }
+
+//
+//
+// typography component styles
+.typoResButton {
+	cursor: pointer;
+	font-size: 14px;
+	line-height: 23px;
+	width: 16px;
+}
+
+.typoResButton.active {
+	color: #6c40f7;
+}
+
+.wrap_res {
+	position: relative;
+}
+
+.resIcons {
+	position: absolute;
+	left: 80px;
+}
+
+.eb-typography-component-panel .wrap_res.forFontSize .resIcons {
+	left: 70px;
+}
+.eb-typography-component-panel .wrap_res.forLetterSpacing .resIcons {
+	left: 100px;
+}
+.eb-typography-component-panel .wrap_res.forLineHeight .resIcons {
+	left: 83px;
+}
+
+//
+// unit control styles (which is also used inside typography control)
+.eb-unit-control-btn-group {
+	margin: 0px 0px -20px 0px;
+	text-align: right;
+	display: block;
+}
+
+.eb-unit-control-btn {
+	color: black;
+	background: transparent !important;
+	outline: none !important;
+	box-shadow: none !important;
+	// -webkit-box-shadow: none !important;
+	border: none !important;
+	text-shadow: none !important;
+}
+
+.eb-unit-active {
+	color: #6c40f7 !important;
+	font-weight: bold;
+}
+
+// fix of this https://trello-attachments.s3.amazonaws.com/5bab5a557340da52ebeb1a8f/60896e40f9bcb94f7a144461/8ea9805e834dc68d5cc694b3cf18c4b0/Controls.png
+.eb-panel-control
+	.components-panel__body
+	.components-input-control__container
+	select.components-select-control__input {
+	line-height: 2em;
+}
+
+//
+.withResWrapperInDimension .dimention-label {
+	display: inline-block;
+	margin-right: 5px;
+}
