image upload button also given in inspector panel

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -930,3 +930,13 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	margin: 0;
 }
 // color control reset icon show little top fix end
+
+// image upload button in inspector panel styles start
+
+.eb-infobox-inspector-panel-img-btn {
+	height: 100px;
+	width: 100%;
+	background-color: #e3e3e3;
+}
+
+// image upload button in inspector panel styles end
