edited editor.scss for color-control slight issue in the essential-blocks

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -736,7 +736,7 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 }
 
 // color control styles start
-.eb-color-base div {
+.eb-color-base > div {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
