reusable background component created in inspector.js

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -946,3 +946,22 @@ body.eb-res-option-mobile .editor-styles-wrapper {
 	text-transform: capitalize;
 }
 // fix end
+
+// new with res btns style start
+
+.eb-panel-control
+	.newWithResWrapper
+	.eb-range-controller-container
+	.eb-range-reset-button {
+	margin-top: 0;
+}
+
+.resLabel {
+	padding-right: 5px;
+}
+
+.resBtns {
+	padding-bottom: 5px;
+}
+
+// new with res btns style end
