fixed image width not work with em and %

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -711,7 +711,7 @@ body.eb-res-option-mobile .editor-styles-wrapper {
    fix of this issue (https://prnt.sc/111gq2g) start
   */
 
-.eb-panel-control .components-button-group {
+.eb-panel-control .components-button-:not(.eb-unit-control-btn-group) {
 	position: relative;
 	z-index: 0;
 }
